Bolds important note about mistakes when using ByteBuddy's immutable classes on tutorial.partial.html
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>

--- a/partial/tutorial.partial.html
+++ b/partial/tutorial.partial.html
@@ -503,8 +503,8 @@ DynamicType.Unloaded&lt;?&gt; dynamicType = new ByteBuddy()
 </p>
 
 <p>
-    As an implication of the mentioned immutability, you must be careful when for example configuring
-    <code>ByteBuddy</code> instances. You might for example make the following mistake:
+    <b>As an implication of the mentioned immutability, you must be careful when for example configuring
+    <code>ByteBuddy</code> instances. You might for example make the following mistake</b>:
 </p>
 
 <pre class="prettyprint">
